# idris-java

./: .gitignore  Dockerfile  README.md  idris-java.cabal
libs/: IdrisJava.idr  idrisjava.ipkg  java.ipkg
libs/IdrisJava/: File.idr  IO.idr  Interactive.idr  Strings.idr  System.idr
src/: Main.hs
src/IRTS/: CodegenJava.hs
src/IRTS/Java/: ASTBuilding.hs  JTypes.hs  Mangling.hs  Pom.hs
test/cases/: IEEE754Converted.idr  fileio.idr  foo.txt  getArgs.idr  io001.idr  jclasses.idr  lwjgl.idr  pythag.idr
test/cases/testclass/: build.sh  pom.xml
test/cases/testclass/src/main/java/org/foo/: Bar.java  Foo.java
